# qflow

./: .gitignore  Cargo.toml  Dockerfile.svm  LICENSE  README.md  crd.yaml
frontend/: designer.jsx  qflow.html  qflow.js
hamiltonian/: Cargo.toml
hamiltonian/src/: lib.rs
ml/: Cargo.toml  README.md  my_data.csv  requirements.txt  svm.py  svm2.py
ml/src/: integrations.rs  main.rs
ml/svm/: classical.py
qcl/: Cargo.toml  README.md
qcl/examples/: bell_circuit.qcl  combined.qcl  hello.qcl  loop.qcl  macro.qcl  observable.qcl  param.qcl  run.qcl  vqe_step.qcl  write_file.qcl
qcl/src/: lib.rs  main.rs  parser.rs  workflow.rs
qcl/src/repl/: mod.rs
qflow-backend/: Cargo.toml
qflow-backend/src/: main.rs
qflow-operator/: Cargo.toml  Dockerfile  README.md
qflow-operator/crd/: deployment.yaml
qflow-operator/src/: main.rs
qflow-operator/tests/: Dockerfile.task-a  Dockerfile.task-b  dag-test.qflow  final.yaml  ui-test.yaml
qflow-types/: Cargo.toml
qflow-types/src/: lib.rs
qflowc/: Cargo.toml  Dockerfile  README.md  test.qflow
qflowc/crd/: qflow.yaml  test-object.yaml
qflowc/examples/: QuantumWorkflow.yaml  bell_circuit.qasm  quantum_test.qflow  sim_params.json
qflowc/src/: lib.rs  main.rs
qsim/: Cargo.toml  Dockerfile  README.md
qsim/examples/: bell.qasm  deutsch_josza.qasm  grover.qasm  teleport.qasm
qsim/src/: api.rs  circuit.rs  events.rs  facade.rs  lib.rs  main.rs  parser.rs  simulator.rs  state.rs  statevector_backend.rs
svm-operator/: Dockerfile
svm-operator/src/: controller.rs
vqa-runner/: Cargo.toml  README.md
vqa-runner/src/: ansatz.rs  main.rs  qcbm.rs
wasm-ui/: Cargo.toml  README.md
wasm-ui/src/: lib.rs  ui.jsx
wasm-ui/ui/: index.css  package-lock.json  package.json  vite.config.ts
wasm-ui/ui/app/: App.jsx  App.jsx.d.ts  routes.ts
wasm-ui/ui/app/components/: CytoscapeGraph.jsx
wasm-ui/ui/app/pages/: CircuitSimulatorPage.jsx  MlSvmPage.jsx  QasmSubmitterPage.jsx  QcbmSubmitterPage.jsx  QclDesignerPage.jsx  SvmExperimentPage.jsx  VisualizerPage.jsx
wasm-ui/ui/app/routes/: _layout.tsx  home.tsx  ml-svm.tsx  qasm.tsx  qcbm.tsx  qcl.tsx  simulator.tsx  svm.tsx  visualizer.tsx
