[package]
name = "qflow-operator"
version = "0.1.0"
edition = "2024"

[dependencies]
kube = { version = "1.1.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.25.0", default-features = false, features = ["v1_30"] }
tokio = { version = "1.46.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

kube-derive = "~0.52" # Support for Custom Resource Definitions
kube-runtime = "1.1.0" # Custom controller support
schemars = "~0.8"
futures-util = "0.3.31"
qflow-types = { path = "../qflow-types" } # Local dependency for qflowc