[package]
name = "qflow-operator"
version = "0.1.0"
edition = "2024"

[dependencies]
kube = { version = "1.1.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.25.0", default-features = false, features = ["v1_30"] }
tokio = { version = "1.46.1", features = ["full"] }

serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

futures-util = "0.3.31"
qflow-types = { path = "../qflow-types" }

petgraph = "0.8.2"