[package]
name = "qflow-types"
version = "0.1.0"
edition = "2024"

[dependencies]
kube = { version = "1.1.0", features = ["derive"] }
k8s-openapi = { version = "0.25.0", default-features = false, features = ["v1_30"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "~0.8"
petgraph = "0.8.2"