[package]
name = "wasm-ui"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
num-complex = "0.4.6"
getrandom = { version = "0.2", features = ["js"] }

qsim = { path = "../qsim" }